OWL Export | Remove Brackets around Subjects in SID response

--- a/src/GUI/GUI-Interactive/Mistral-Small/GUI-Interactive_Mistral_CoT.ipynb
+++ b/src/GUI/GUI-Interactive/Mistral-Small/GUI-Interactive_Mistral_CoT.ipynb
@@ -673,7 +673,7 @@
     "Write the SID as a **numbered list** describing subject-to-subject message flows.\n",
     "\n",
     "Format:\n",
-    "'[Subject A] -> [Subject B]: [Message]'\n",
+    "'Subject A -> Subject B: Message'\n",
     "\n",
     "### Step 4: Subject Behavior Diagram (SBD)\n",
     "\n",
