Mistral CoT | Include Reasoning Phase in Prompt from updated Llama Prompt

--- a/src/GUI/GUI-Interactive/Mistral-Small/GUI-Interactive_Mistral_CoT.ipynb
+++ b/src/GUI/GUI-Interactive/Mistral-Small/GUI-Interactive_Mistral_CoT.ipynb
@@ -675,7 +675,28 @@
     "Format:\n",
     "'Subject A -> Subject B: Message'\n",
     "\n",
-    "### Step 4: Subject Behavior Diagram (SBD)\n",
+    "### Step 4: Think Step-by-Step (REASONING PHASE)\n",
+    "\n",
+    "- Break down the subject's journey into clear events.\n",
+    "- Identify each type of PASS state involved.\n",
+    "- Consider conditional branches (e.g., item in stock vs out of stock).\n",
+    "- Match each message in the SID to the appropriate state.\n",
+    "- Ensure logical transitions and valid branches or GotoSteps.\n",
+    "-When the subject receives a Declination Message (e.g. item out of stock), the flow must proceed to a \n",
+    " DoState: Decide upon further action, where the subject either cancels the order or chooses another supplier. \n",
+    " This ensures proper branching and no immediate sending of cancellation message without decision.\n",
+    " \n",
+    "-When the subject receives e.g. a payment request, they must first send payment, then receive payment confirmation, \n",
+    "and then transition to the final state (e.g., Order Confirmed).\n",
+    "\n",
+    "-The Order Declination branch must go to a DoState (decision) and must not pass through payment states.\n",
+    "\n",
+    "-Never allow decision branches to lead to states meant for a different outcome (e.g., do not send to \"Receive Payment Confirmation\" if no payment was sent).\n",
+    "\n",
+    "**Please write out your reasoning step-by-step before generating the Subject Behavior Diagram (SBD).**\n",
+    "\n",
+    "### Step 5: Subject Behavior Diagram (SBD)\n",
+    "You must include exactly this line '### SBD' before you start to list the SBDs for the subjects.\n",
     "\n",
     "For each subject from Step 1, describe its internal behavior using PASS state types:\n",
     "\n",
