Mistral CoT | Adjust Prompt Format and Parser

--- a/src/GUI/GUI-Interactive/Mistral-Small/GUI-Interactive_Mistral_CoT.ipynb
+++ b/src/GUI/GUI-Interactive/Mistral-Small/GUI-Interactive_Mistral_CoT.ipynb
@@ -31,7 +31,7 @@
     "    lines = full_text.splitlines()\n",
     "    sbd_start = None\n",
     "    for i, line in enumerate(lines):\n",
-    "        if \"### SBD\" in line:\n",
+    "        if \"### Step 5\" in line:\n",
     "            sbd_start = i + 1\n",
     "            break\n",
     "    if sbd_start is None:\n",
@@ -417,7 +417,7 @@
     "        ln_strip = ln.strip()\n",
     "\n",
     "        # Start of SBD section\n",
-    "        if ln_strip.startswith(\"### SBD\"):\n",
+    "        if ln_strip.startswith(\"### SBD\") or ln_strip.startswith(\"### Step 5\"):\n",
     "            in_sbd_section = True\n",
     "            continue\n",
     "\n",
@@ -694,9 +694,10 @@
     "-Never allow decision branches to lead to states meant for a different outcome (e.g., do not send to \"Receive Payment Confirmation\" if no payment was sent).\n",
     "\n",
     "**Please write out your reasoning step-by-step before generating the Subject Behavior Diagram (SBD).**\n",
+    "Do not format like '#### Subject:'.\n",
     "\n",
     "### Step 5: Subject Behavior Diagram (SBD)\n",
-    "You must include exactly this line '### SBD' before you start to list the SBDs for the subjects.\n",
+    "ALWAYS include a colon after you list the name of the subject of the SBD.\n",
     "\n",
     "For each subject from Step 1, describe its internal behavior using PASS state types:\n",
     "\n",
@@ -882,7 +883,7 @@
     "            temperature=0.5\n",
     "        )\n",
     "        sid_sbd = response.choices[0].message.content.strip()\n",
-    "        \n",
+    "        print(\"############ API RESPONSE #############\\n\", sid_sbd)\n",
     "        \n",
     "        # Build clean text for OWL function\n",
     "        llm_text = (\n",
