Llama CoT | Include Subject List in Prompt

--- a/src/GUI/GUI-Interactive/Llama/GUI-Interactive_Llama_CoT.ipynb
+++ b/src/GUI/GUI-Interactive/Llama/GUI-Interactive_Llama_CoT.ipynb
@@ -794,7 +794,16 @@
     "\n",
     "### Step 1: Identify Subjects\n",
     "\n",
-    "List all autonomous subjects (actors or systems) involved in the scenario.\n",
+    "Finalized subjects:\n",
+    "{subjects}\n",
+    "\n",
+    "Important: Use ONLY these subjects. Do NOT introduce any other subjects. \n",
+    "All interactions in the SID must be between these subjects.\n",
+    "\n",
+    "Very Strict Rule:\n",
+    "- You MUST use ONLY these subjects EXACTLY as written (same spelling & capitalization).\n",
+    "- DO NOT introduce, rename, or re-add any subject (like \"Payment Gateway\" or \"Website\").\n",
+    "- If a subject seems missing, map its role to one of the listed subjects.\n",
     "\n",
     "### Step 2: Identify Messages (Noun Form Only)\n",
     "\n",
