Llama Interactive | Adjust Prompts to fix Capitalization Errors during Mapping

--- a/src/GUI/GUI-Interactive/Llama/Llama-Interactive-_.ipynb
+++ b/src/GUI/GUI-Interactive/Llama/Llama-Interactive-_.ipynb
@@ -984,7 +984,8 @@
     "\\\"\\\"\\\"{scenario}\\\"\\\"\\\"\n",
     "\n",
     "\n",
-    "Only identify all the subjects involved.  \n",
+    "Only identify all the subjects involved.\n",
+    "Every word of the subject must begin with a capital letter.\n",
     "Return as a simple bullet list:\n",
     "\n",
     "### Subjects:\n",
@@ -1006,6 +1007,10 @@
     "Important: Use ONLY these subjects. Do NOT introduce any other subjects. \n",
     "All interactions in the SID must be between these subjects. \n",
     "\n",
+    "Very Strict Rule:\n",
+    "- You MUST use ONLY these subjects EXACTLY as written (same spelling & capitalization).\n",
+    "- DO NOT introduce, rename, or re-add any subject (like \"Payment Gateway\" or \"Website\").\n",
+    "- If a subject seems missing, map its role to one of the listed subjects.\n",
     "\n",
     "Your task is to generate a PASS model in two parts:\n",
     "\n",
