Llama Interactive | Prompt Adjustments to fix wrong usage of Choices in RecieveState

--- a/src/GUI/GUI-Interactive/Llama/Llama-Interactive-_.ipynb
+++ b/src/GUI/GUI-Interactive/Llama/Llama-Interactive-_.ipynb
@@ -1090,6 +1090,7 @@
     "Clarifications for ReceiveState and Control Flow:\n",
     "\n",
     "- A `ReceiveState` with `Choices:` should **not** continue into the next numeric step by default.\n",
+    "- 'Choices:' may appear ONLY directly under a 'RecieveState' and must NEVER be used as a standalone step.\n",
     "- The `Next:` field under each `Choice:` is the **only** path to follow.\n",
     "- Ensure each `Next:` maps to a valid step with correct logic. Do **not** assume the next numeric step follows sequentially.\n",
     "- If a message like `Order Declination Message` is received, it should go **directly to the correct decision step** (e.g., Decide upon further action), not to a step meant for confirmations (e.g., Step 5).\n",
