Mistral Interactive | Fix Model Name

--- a/src/GUI/GUI-Interactive/Mistral-Small/Mistral-Interactive-_.ipynb
+++ b/src/GUI/GUI-Interactive/Mistral-Small/Mistral-Interactive-_.ipynb
@@ -972,7 +972,7 @@
     "# --- API setup ---\n",
     "api_key = \"\"\n",
     "base_url = \"https://gpt.uni-muenster.de/v1\"\n",
-    "model = \"mistral_small\"  # model used\n",
+    "model = \"mistral-small\"  # model used\n",
     "client = OpenAI(api_key=api_key, base_url=base_url)\n",
     "\n",
     "# --- Prompt Templates ---\n",
