Mistral Interactive | Adjust Prompt for correct SBD output format

--- a/src/GUI/GUI-Interactive/Mistral-Small/Mistral-Interactive-_.ipynb
+++ b/src/GUI/GUI-Interactive/Mistral-Small/Mistral-Interactive-_.ipynb
@@ -1020,6 +1020,8 @@
     "\n",
     "### Rules for the SBD:\n",
     "- For each subject, describe their **internal behavior** as a sequence of states.\n",
+    "- You MUST use a markdown heading in exactly this form:\n",
+    "  #### SubjectName:\n",
     "- Use the following state types and label each step explicitly:\n",
     "  - **StartState**: the beginning of the behavior\n",
     "  - **ReceiveState**: receiving a message\n",
@@ -1559,6 +1561,14 @@
     "\n",
     "app.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ff4984e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
