gpt-oss Interactive | Adjust Prompt for correct SBD output format

--- a/src/GUI/GUI-Interactive/GPT/gpt-oss-Interactive-_.ipynb
+++ b/src/GUI/GUI-Interactive/GPT/gpt-oss-Interactive-_.ipynb
@@ -1019,6 +1019,8 @@
     "\n",
     "### Rules for the SBD:\n",
     "- For each subject, describe their **internal behavior** as a sequence of states.\n",
+    "- You MUST use a markdown heading in exactly this form:\n",
+    "  #### SubjectName:\n",
     "- Use the following state types and label each step explicitly:\n",
     "  - **StartState**: the beginning of the behavior\n",
     "  - **ReceiveState**: receiving a message\n",
@@ -1505,7 +1507,7 @@
     "                  }\n",
     "        from datetime import datetime\n",
     "        timestamp = datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
-    "        graph_path = fr\"C:\\Users\\qwerz\\Documents\\Privat\\WWU\\Wirtschaftsinformatik\\Semester 7\\Bachelorarbeit\\PASS Diagrams\\Diagram\\llama\\sid_graph-{timestamp}\"\n",
+    "        graph_path = fr\"C:\\Users\\qwerz\\Documents\\Privat\\WWU\\Wirtschaftsinformatik\\Semester 7\\Bachelorarbeit\\PASS Diagrams\\Diagram\\gpt-oss\\sid_graph-{timestamp}\"\n",
     "        print(\"Graph saved at:\", graph_path + \".png\")\n",
     "        draw_sid_graph(process[\"SID\"],output_path=graph_path)\n",
     "        \n",
@@ -1522,14 +1524,14 @@
     "        \n",
     "        if sbd_textt:\n",
     "            print(sbd_textt)\n",
-    "            output_folder = fr\"C:\\Users\\qwerz\\Documents\\Privat\\WWU\\Wirtschaftsinformatik\\Semester 7\\Bachelorarbeit\\PASS Diagrams\\Diagram\\llama\"\n",
+    "            output_folder = fr\"C:\\Users\\qwerz\\Documents\\Privat\\WWU\\Wirtschaftsinformatik\\Semester 7\\Bachelorarbeit\\PASS Diagrams\\Diagram\\gpt-oss\"\n",
     "            draw_all_subjects(sbd_textt,output_folder)\n",
     "            \n",
     "        else:\n",
     "            print(\"No SBD section found in response!\")\n",
     "        \n",
     "        print(\"llm_text\",llm_text)\n",
-    "        xml = sid_to_pass_owl(llm_text, out_file=r\"C:\\Users\\qwerz\\Documents\\Privat\\WWU\\Wirtschaftsinformatik\\Semester 7\\Bachelorarbeit\\PASS Diagrams\\Diagram\\llama\\OWLFile-Llama.owl\")\n",
+    "        xml = sid_to_pass_owl(llm_text, out_file=r\"C:\\Users\\qwerz\\Documents\\Privat\\WWU\\Wirtschaftsinformatik\\Semester 7\\Bachelorarbeit\\PASS Diagrams\\Diagram\\gpt-oss\\OWLFile-GPT_OSS.owl\")\n",
     "        \n",
     "        \n",
     "        \n",
