gpt-oss Interactive | Adjust Prompt for correct Output Format

--- a/src/GUI/GUI-Interactive/GPT/gpt-oss-Interactive-_.ipynb
+++ b/src/GUI/GUI-Interactive/GPT/gpt-oss-Interactive-_.ipynb
@@ -1013,14 +1013,19 @@
     "- Avoid using verbs like “place”, “send”, “check”, or “confirm”.\n",
     "- Use noun phrases that represent the content of the interaction, not the action.\n",
     "- Return the SID as a numbered list of interactions using the format:\n",
+    "  ### Subject Interaction Diagram (SID)\n",
     "  Subject A -> Subject B: Message (noun form)\n",
+    "- Do NOT include additional information except the interactions (e.g. **Subject Interaction Diagram (SID)**)\n",
     "  \n",
     "### 2. Subject Behavior Diagram (SBD):\n",
     "\n",
     "### Rules for the SBD:\n",
     "- For each subject, describe their **internal behavior** as a sequence of states.\n",
+    "- Start this section with the following heading:\n",
+    "  ### Subject Behavior Diagram (SBD)\n",
     "- You MUST use a markdown heading in exactly this form:\n",
     "  #### SubjectName:\n",
+    "- Do NOT use any additional markdown describing the states within the SBD.\n",
     "- Use the following state types and label each step explicitly:\n",
     "  - **StartState**: the beginning of the behavior\n",
     "  - **ReceiveState**: receiving a message\n",
@@ -1560,6 +1565,14 @@
     "\n",
     "app.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e8fb2fc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
