--- a/src/GUI/GUI-Interactive/GPT/gpt-oss-Interactive-_.ipynb
+++ b/src/GUI/GUI-Interactive/GPT/gpt-oss-Interactive-_.ipynb
@@ -985,6 +985,7 @@
     "\n",
     "\n",
     "Only identify all the subjects involved.\n",
+    "Do NOT add any additional information about the subject in brackets.\n",
     "Return as a simple bullet list:\n",
     "\n",
     "### Subjects:\n",
