gpt-oss Interactive | Adjust Prompt to fix Parsing Errors

--- a/src/GUI/GUI-Interactive/GPT/gpt-oss-Interactive-_.ipynb
+++ b/src/GUI/GUI-Interactive/GPT/gpt-oss-Interactive-_.ipynb
@@ -1181,10 +1181,9 @@
     "\n",
     "###ABSOLUTE Next: RULE (HIGHEST PRIORITY):\n",
     "-Every state must explicitly include a Next: line. No exceptions.\n",
-    "\n",
     "-Next: must always appear immediately under each state (even when sequential).\n",
-    "\n",
     "-Next: must point to the next valid step number in the flow.\n",
+    "- Do NOT include any additional information in the 'Next:' line except the number of the next step.\n",
     "\n",
     "For example:-\n",
     "3. SendState: Send Order to Supplier\n",
@@ -1221,6 +1220,7 @@
     "- If a retry loop is needed, use:\n",
     "  - `GotoStep:` to return to the appropriate order initiation step.\n",
     "- Ensure all retry paths explicitly flow to `GotoStep`, not a dangling step.\n",
+    "- Do NOT include any additional information in the 'GotoStep:' line using markdown.\n",
     "\n",
     "### IMPORTANT Branch Semantics and Retry Detection Rules:\n",
     "-If a Branch has a description that includes any of the following retry-like phrases:\n",
@@ -1277,13 +1277,12 @@
     "7  EndState: Appointment request cancelled (end of this path)\n",
     "8. GotoStep: 2  # Retry appointment loop\n",
     "\n",
-    "##IMPORTANT: Global Unique Step Numbering Rule\n",
+    "##IMPORTANT: Unique Step Numbering Rule\n",
     "\n",
-    "-Each line in the SBD must have a globally unique step number.\n",
-    "\n",
+    "-Each line in the same SBD must have a unique step number.\n",
     "-Never reuse a number for two different steps, even across branches.\n",
-    "\n",
     "-Numbering must always increase sequentially, without gaps or duplicates.\n",
+    "-Each SBD must start with step number 1.\n",
     "\n",
     "\n",
     "###ABSOLUTE ENDSTATE RULE\n",
